# Abrechnungsprogramm

./: CMakeLists.txt  README.md
docs/: Bedienungsanleitung.docx  ToDos.txt
forms/: mainwindow.ui
include/: AddItemDialog.h  AddMemberDialog.h  CSVParser.h  CalculationHelper.h  ConfigHandler.h  ErrorHandler.h  FileHelper.h  PDFHelper.h  SearchMemberDialog.h  StatisticsHelper.h  StringHelper.h  TableWidgetHelper.h  mainwindow.h
src/: AddItemDialog.cpp  AddMemberDialog.cpp  CalculationHelper.cpp  ConfigHandler.cpp  ErrorHandler.cpp  FileHelper.cpp  PDFHelper.cpp  SearchMemberDialog.cpp  StatisticsHelper.cpp  StringHelper.cpp  TableWidgetHelper.cpp  main.cpp  mainwindow.cpp
